--- a/package.json
+++ b/package.json
@@ -20,19 +20,26 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@parcel/transformer-sass": "^2.8.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "hardhat": "^2.13.0",
     "hardhat-deploy": "^0.11.25",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "parcel": "^2.8.3",
+    "parcel-plugin-static-files-copy": "^2.6.0",
+    "parcel-reporter-static-files-copy": "^1.5.0",
     "process": "^0.11.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "staticFiles": {
+    "staticPath": "./public"
   }
 }
